// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input.html [vue] format 1`] = `
"Unexpected character \\"EOF\\" (2:1)
  1 | <input type='text'>
> 2 |
    | ^"
`;

exports[`input.html - {"htmlVoidTags":true} [vue] format 1`] = `
"Unexpected character \\"EOF\\" (2:1)
  1 | <input type='text'>
> 2 |
    | ^"
`;

exports[`input.html - {"htmlVoidTags":true} format 1`] = `
====================================options=====================================
htmlVoidTags: true
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text">

================================================================================
`;

exports[`input.html - {"htmlVoidTags":true} format 2`] = `
====================================options=====================================
htmlVoidTags: true
parsers: ["angular", "vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text" />

================================================================================
`;

exports[`input.html format 1`] = `
====================================options=====================================
parsers: ["html", "angular", "vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text" />

================================================================================
`;
